# make_money

./: .gitignore  Dockerfile  README.md  firebase.json  pyproject.toml  requirements.txt
.agent/workflows/: create_and_publish_article.md  deploy_trend_blog.md
.firebase/: hosting.YmxvZy9wdWJsaWM.cache
.serena/: project.yml
.serena/memories/: coding_conventions.md  project_overview.md  suggested_commands.md  tech_stack.md
blog/: hugo.toml
blog/assets/css/: custom.css
blog/content/: privacy.md
blog/content/posts/: 2026年版・AIを使った副業で月5万円稼ぐロードマップ完全ガイド.md  ChatGPTで稼ぐ！2026年最新・初心者でもできるAIライティング副業の始め方.md  Googleアドセンス審査に通るブログの作り方・合格のための完全チェックリスト.md  【特集】「春から大学行くんだけど、PC買ったほうがいい？」と相談されたら。2026年版・大学生BYO.md  会社員が副業ブログで月10万円を達成するまでの1年間の記録.md  初心者向けNISA完全ガイド・新NISAで資産1000万円を目指す投資戦略.md  在宅ワーク・テレワークで生産性を3倍にするおすすめツールと環境構築の完全ガイド.md
blog/layouts/: index.html  single.html
blog/layouts/_default/: single.html
blog/layouts/_partials/: site-footer.html
blog/layouts/partials/: head-additions.html  sidebar.html
blog/layouts/shortcodes/: affiliate.html
scripts/: check_env.py  entrypoint.sh  list_models.py
src/: config.py  main.py
src/fetcher/: google_trends.py
src/generator/: article.py  researcher.py
src/publisher/: hugo_builder.py
